2005-05-23  Nate Nielsen  <nielsen@memberwebs.com>

	* modules/smb-method.c: (prompt_authentication)
	Fill in default_user and default_domain
	
2005-05-22  Christian Kellner  <gicmo@gnome.org>

	* configure.in: 
	Post release version bump (2.11.2).

=== gnome-vfs 2.11.1 ===

2005-05-22  Christian Kellner  <gicmo@gnome.org>

	* NEWS: Update for 2.11.1 release
	* configure.in: 
	Pre release version bump

2005-05-22  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-module-shared.c:
	(gnome_vfs_get_special_mime_type): Use the
	GnomeVFSFileInfo struct properly.
	Should fix bug #168557.
	
2005-05-16  Nate Nielsen  <nielsen@memberwebs.com>

	* smb-method.c 
	(lookup_user_cache, initial_authentication, prompt_authentication): 
	Fix problems with prompting for authentication twice. 
	Patch by Narayana Pattipati. Fixes bug #172695.
	
2005-05-16  Tor Lillqvist  <tml@novell.com>

	* libgnomevfs/gnome-vfs-uri.c (gnome_vfs_uri_new): On Win32, use
	gnome_vfs_escape_path_string() on file: URIs to replace
	backslashes with slashes etc.

	* modules/file-method.c (do_open, do_create): Use binary mode on
	Win32.
	(do_remove_directory, do_find_directory, rename_helper): Use gstdio
	wrappers here, too.
	
2005-05-12  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-mime.c:
	(_gnome_vfs_get_mime_type_internal):
	Implement mime subclassing lookup. 
	Should fix bug #171595.

2005-05-10  Christian Neumair  <chris@gnome-de.org>

	* schemas/system_dns_sd.schemas.in:
	Minor string fixes.
	Fixes bug #149523.

2005-05-09  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-private-utils.c:
	(_gnome_vfs_url_show_using_handler_with_env):
	Properly expand "%s" occuring in arguments. 
	Fixes bug #302992.

2005-05-09  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c: (copy_directory):
	Restore preservation of atime, mtime and permissions broken
	by the setgid directories patch. 
	Fixes bug #303470.
