@@ -6,9 +6,12 @@
       <applyto>/system/smb/workgroup</applyto>
       <owner>gnome-vfs</owner>
       <type>string</type>
+      <default></default>
       <locale name="C">
         <short>SMB workgroup</short>
-        <long>The window workgroup the user is part of</long>
+        <long>The Windows networking workgroup or domain that the user 
+        is part of. In order for a new workgroup to fully take effect 
+        the user may need to log out and log back in. </long>
       </locale>
     </schema>
   </schemalist>
